[gd_scene load_steps=11 format=3 uid="uid://bw8sepo1dej0s"]

[ext_resource type="Script" path="res://Game/player/player_controller.gd" id="1_chifv"]
[ext_resource type="PackedScene" uid="uid://b10igw5xcvojj" path="res://Interface/ui_player_interface.tscn" id="2_uk1te"]
[ext_resource type="Script" path="res://Game/player/player_frobber.gd" id="2_wjsc6"]
[ext_resource type="Script" path="res://Game/MissionInventory.gd" id="4_8w30n"]
[ext_resource type="PackedScene" uid="uid://bfwfcn483wgly" path="res://Game/player/tools/tool_manager.tscn" id="4_bexwg"]
[ext_resource type="Texture2D" uid="uid://ti8omwpac58c" path="res://Content/sprites/spr_ui_crosshair.png" id="7_00gkg"]
[ext_resource type="Script" path="res://Game/components/pocket_component.gd" id="14_hygt8"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_hcygf"]
radius = 0.2
height = 3.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_mrjsy"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_2v6a4"]
height = 1.0

[node name="Player" type="CharacterBody3D"]
collision_mask = 10
script = ExtResource("1_chifv")
walking_speed = 10.0
sprinting_speed = 16.0
gravity_accel_ramp = 0.6
grav_multiplier = -15.0
bunny_multiplier = 50.0
bunny = false

[node name="CamContainer" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="Camera3D" type="Camera3D" parent="CamContainer"]
cull_mask = 524285
current = true
script = ExtResource("2_wjsc6")

[node name="RayCast3D" type="RayCast3D" parent="CamContainer/Camera3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
target_position = Vector3(0, -3, 0)
collision_mask = 4
hit_from_inside = true
collide_with_areas = true

[node name="Frobber" type="ShapeCast3D" parent="CamContainer/Camera3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -0.3)
shape = SubResource("CapsuleShape3D_hcygf")
collision_mask = 244
collide_with_areas = true

[node name="ToolCamera" type="Camera3D" parent="CamContainer/Camera3D"]
cull_mask = 2

[node name="ImmediateUI" type="Control" parent="CamContainer/Camera3D"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Crosshair" type="TextureRect" parent="CamContainer/Camera3D/ImmediateUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.375, 0.375)
pivot_offset = Vector2(32, 32)
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("7_00gkg")

[node name="ColorRect" type="ColorRect" parent="CamContainer/Camera3D/ImmediateUI/Crosshair"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -245.5
offset_top = 45.3333
offset_right = 245.5
offset_bottom = 357.333
grow_horizontal = 2
grow_vertical = 2
color = Color(0.404511, 0.404511, 0.404511, 1)

[node name="InteractText" type="Label" parent="CamContainer/Camera3D/ImmediateUI/Crosshair"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -238.5
offset_top = 53.3333
offset_right = 238.5
offset_bottom = 349.333
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(72.0002, 36.4452)
theme_override_font_sizes/font_size = 41
text = "Interact"
horizontal_alignment = 1
autowrap_mode = 3

[node name="ModifierText" type="Label" parent="CamContainer/Camera3D/ImmediateUI/Crosshair"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -238.0
offset_top = 128.0
offset_right = 239.0
offset_bottom = 349.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(72.0002, 36.4452)
theme_override_font_sizes/font_size = 41
text = "Modifier"
horizontal_alignment = 1
autowrap_mode = 3

[node name="AppendText" type="Label" parent="CamContainer/Camera3D/ImmediateUI/Crosshair"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -238.0
offset_top = 213.0
offset_right = 239.0
offset_bottom = 349.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(72.0002, 36.4452)
theme_override_font_sizes/font_size = 41
text = "Append"
horizontal_alignment = 1
autowrap_mode = 3

[node name="ToolManager" parent="CamContainer" node_paths=PackedStringArray("player", "cam_container", "ray3d", "playerFrobber") instance=ExtResource("4_bexwg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
player = NodePath("../..")
cam_container = NodePath("..")
ray3d = NodePath("../Camera3D/RayCast3D")
playerFrobber = NodePath("../Camera3D")

[node name="HoldPoint" parent="CamContainer/ToolManager" index="6"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)

[node name="StandingCollision" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_mrjsy")

[node name="CrouchingCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
shape = SubResource("CapsuleShape3D_2v6a4")

[node name="CeilingCheck" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
target_position = Vector3(0, 2, 0)

[node name="PlayerInterface" parent="." instance=ExtResource("2_uk1te")]

[node name="MissionInventory" type="Node" parent="."]
script = ExtResource("4_8w30n")

[node name="PocketComponent" type="Node" parent="."]
script = ExtResource("14_hygt8")

[editable path="CamContainer/ToolManager"]
[editable path="CamContainer/ToolManager/ToolHands"]
